# oxytrace

./: .env.example  .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
input/: input_for_anomaly.py  sample_anomaly_test.csv
notebooks/: data_exploration.ipynb  feature_ideas.ipynb  model_comparison.ipynb  z-score_IQR.ipynb
oxytrace/app/: __init__.py  streamlit_app.py
oxytrace/cli/: main.py  train_detector.py  train_forecaster.py
oxytrace/core/features/: oxygen.py  oxygen_feature_engineer.py
oxytrace/core/models/: detector.py  ensemble_detector.py  forecaster.py  statistical_detector.py
oxytrace/core/utils/: config.py  dataset.py  logger.py
oxytrace/data/: .gitkeep
oxytrace/evaluation/: detector.py  forecaster.py
oxytrace/src/: anomaly_detector.py  feature_engineering.py  main.py  train.py  train_detector.py  train_forecaster.py
oxytrace/src/models/: simple_forecaster.py  statstical_detector.py  unified_anomaly_detector.py
oxytrace/src/utils/: __init__.py  custom_logger.py  dataset_util.py
oxytrace/tests/: test_synthetic.py
oxytrace/tools/: predict.py  synthetic_data.py
scripts/: evaluate_forecaster.py  evaluate_thresholds.py  generate_synthetic_data.py  predict.py  test_synthetic.py
