[project]
name = "oxytrace"
version = "0.1.0"
description = ""
authors = [
    {name = "Shad Humydee",email = "showmmos@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=25.11.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "autoflake (>=2.3.1,<3.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "pylint (>=4.0.3,<5.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "scikit-learn (>=1.3.0,<2.0.0)",
    "scipy (>=1.11.0,<2.0.0)",
    "tensorflow (>=2.15.0,<3.0.0)",
    "prophet (>=1.1.5,<2.0.0)",
    "seaborn (>=0.13.0,<1.0.0)",
    "streamlit (>=1.30.0,<2.0.0)",
    "plotly (>=5.18.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']
exclude = '''
/(
    \.venv
  | \.git
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
skip = [".venv", ".git", "__pycache__", "build", "dist"]

[tool.pylint]
ignore = [".venv", ".git", "__pycache__", "build", "dist"]
max-line-length = 120
